[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
pyfiglet = "^0.8.post1"
colorama = "^0.4.4"
backend = "^0.2.4"
discord = "^1.7.3"
praw = "^7.5.0"
config = "^0.5.1"
banner = "^0.0.2"
twint = "^2.1.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"